--- a/AndroidUI/app/src/main/res/layout/activity_showmeasurements.xml
+++ b/AndroidUI/app/src/main/res/layout/activity_showmeasurements.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".showmeasurements">
+    tools:context=".ShowMeasurements">
 
     <Button
         android:id="@+id/godkenddesignknap"
@@ -18,11 +18,11 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView6"
+        app:layout_constraintTop_toTopOf="@+id/acceptcadmeasurements"
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/acceptcadmeasurements"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
