--- a/AndroidUI/app/src/main/res/layout/activity_showwall.xml
+++ b/AndroidUI/app/src/main/res/layout/activity_showwall.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".showdoor">
+    tools:context=".ShowWall">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -25,7 +25,7 @@
         android:layout_width="328dp"
         android:layout_height="416dp"
         android:contentDescription="@string/app_name"
-        app:layout_constraintBottom_toTopOf="@+id/Godkenddesignknap"
+        app:layout_constraintBottom_toTopOf="@+id/acceptwall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,7 +33,7 @@
         app:srcCompat="@drawable/doorimage" />
 
     <Button
-        android:id="@+id/Godkenddesignknap"
+        android:id="@+id/acceptwall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
