--- a/AndroidUI/app/src/main/res/layout/activity_showmeasurements.xml
+++ b/AndroidUI/app/src/main/res/layout/activity_showmeasurements.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/white"
     tools:context=".ShowMeasurements">
 
     <Button
@@ -25,19 +25,19 @@
         android:id="@+id/acceptcadmeasurements"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="260dp"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/baggrundprogram" />
+        app:srcCompat="@drawable/logo1" />
 
     <ImageView
         android:id="@+id/imageView10"
-        android:layout_width="328dp"
-        android:layout_height="416dp"
+        android:layout_width="289dp"
+        android:layout_height="325dp"
+        android:layout_marginBottom="10dp"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toTopOf="@+id/godkenddesignknap"
         app:layout_constraintEnd_toEndOf="parent"
