--- a/AndroidUI/app/src/main/res/layout/activity_accept.xml
+++ b/AndroidUI/app/src/main/res/layout/activity_accept.xml
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <ImageView
-        android:id="@+id/imageView8"
+        android:id="@+id/wallpicture"
         android:layout_width="248dp"
         android:layout_height="312dp"
         android:layout_marginBottom="10dp"
@@ -56,9 +56,9 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/closeapp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView8"
+        app:layout_constraintEnd_toEndOf="@+id/wallpicture"
         app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
-        app:layout_constraintTop_toTopOf="@+id/imageView8"
+        app:layout_constraintStart_toStartOf="@+id/wallpicture"
+        app:layout_constraintTop_toTopOf="@+id/wallpicture"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
