--- a/05 Implementation/New-Yorkers væg designer/app/src/main/res/layout/activity_showwall.xml
+++ b/05 Implementation/New-Yorkers væg designer/app/src/main/res/layout/activity_showwall.xml
@@ -56,10 +56,9 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="44dp"
         android:fontFamily="@font/roboto"
-        android:text="@string/_4_fag_m_4_glas"
+        android:text="4 FAG m/ 4 glas"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -74,10 +73,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/roboto"
-        android:text="@string/vejl_m_l"
+        android:text="Vejl, mål"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="8sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -92,10 +91,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
-        android:text="@string/bredde_40_cm"
+        android:text="Bredde: 40 CM"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="8sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -110,10 +109,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/roboto"
-        android:text="@string/h_jde_180_cm"
+        android:text="Højde: 180 CM"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="8sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -128,10 +127,9 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/roboto"
-        android:text="@string/pris_4_700"
+        android:text="Pris: 4.700,-"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -143,7 +141,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="264dp"
-        android:contentDescription="@string/_47_dkr"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
