--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_showwall.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity_showwall.xml
@@ -56,9 +56,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="44dp"
         android:fontFamily="@font/roboto"
-        android:text="4 FAG m/ 4 glas"
+        android:text="@string/_4_fag_m_4_glas"
         android:textAllCaps="true"
         android:textColor="@color/white"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -73,10 +74,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/roboto"
-        android:text="Vejl, mål"
+        android:text="@string/vejl_m_l"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -91,10 +92,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/roboto"
-        android:text="Bredde: 40 CM"
+        android:text="@string/bredde_40_cm"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -109,10 +110,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="4dp"
         android:fontFamily="@font/roboto"
-        android:text="Højde: 180 CM"
+        android:text="@string/h_jde_180_cm"
         android:textAllCaps="true"
         android:textColor="@color/white"
-        android:textSize="8sp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -127,9 +128,10 @@
         android:layout_marginLeft="16dp"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/roboto"
-        android:text="Pris: 4.700,-"
+        android:text="@string/pris_4_700"
         android:textAllCaps="true"
         android:textColor="@color/white"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/imageView6"
         app:layout_constraintHorizontal_bias="0.0"
@@ -141,6 +143,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="264dp"
+        android:contentDescription="@string/_4_fag_m_4_glas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
