--- a/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity__catalogue.xml
+++ b/05 Implementation/New-Yorker designer app/app/src/main/res/layout/activity__catalogue.xml
@@ -9,75 +9,77 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="158dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/wallchoice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/catalougeimage"
-                android:contentDescription="@string/todo" />
+                android:contentDescription="@string/_47_dkr"
+                app:srcCompat="@drawable/catalougeimage" />
 
             <ImageView
                 android:id="@+id/wallchoice2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/todo"
+                android:contentDescription="@string/_47_dkr"
                 app:srcCompat="@drawable/catalougeimage" />
 
             <ImageView
                 android:id="@+id/wallchoice3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/todo"
+                android:contentDescription="@string/_47_dkr"
                 app:srcCompat="@drawable/catalougeimage" />
 
             <ImageView
                 android:id="@+id/wallchoice4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/todo"
+                android:contentDescription="@string/_47_dkr"
                 app:srcCompat="@drawable/catalougeimage" />
 
             <ImageView
                 android:id="@+id/wallchoice5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/todo"
+                android:contentDescription="@string/_47_dkr"
                 app:srcCompat="@drawable/catalougeimage" />
 
             <ImageView
                 android:id="@+id/wallchoice6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/todo"
+                android:contentDescription="@string/_47_dkr"
                 app:srcCompat="@drawable/catalougeimage" />
 
             <ImageView
                 android:id="@+id/wallchoice7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/todo"
+                android:contentDescription="@string/_47_dkr"
                 app:srcCompat="@drawable/catalougeimage" />
 
             <ImageView
                 android:id="@+id/wallchoice8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/todo"
+                android:contentDescription="@string/_47_dkr"
                 app:srcCompat="@drawable/catalougeimage" />
 
             <ImageView
                 android:id="@+id/wallchoice9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="@string/todo"
+                android:contentDescription="@string/_47_dkr"
                 app:srcCompat="@drawable/catalougeimage" />
         </LinearLayout>
     </ScrollView>
